# sidecar-proteinmpnn

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.gpu  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GPU-DEPLOY.md
scripts/: gen_proto.sh
src/foldforge_proteinmpnn/: __init__.py  config.py  model.py  proteinmpnn.py  server.py
tests/: test_config.py  test_grpc_it.py  test_proteinmpnn.py
